--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core : ^0.5.0
   cloud_firestore: ^0.14.2
+  flutter_form_builder: ^3.14.1
+  url_launcher: ^5.7.10
 
 
   # The following adds the Cupertino Icons font to your application.
