--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core : ^0.5.0
+  firebase_core : ^0.5.2
   cloud_firestore: ^0.14.2
+  firebase_auth: ^0.18.3
   flutter_form_builder: ^3.14.1
   url_launcher: ^5.7.10
+  animated_text_kit: ^2.5.4
+  date_format: ^1.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
