--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   url_launcher: ^5.7.10
   animated_text_kit: ^2.5.4
   date_format: ^1.0.9
+  modal_progress_hud: ^0.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
