--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   animated_text_kit: ^2.5.4
   date_format: ^1.0.9
   modal_progress_hud: ^0.1.3
+  flutter_calendar_carousel: ^1.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
