--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   date_format: ^1.0.9
   modal_progress_hud: ^0.1.3
   flutter_calendar_carousel: ^1.5.1
+  google_maps_flutter: ^1.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
