--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   modal_progress_hud: ^0.1.3
   flutter_calendar_carousel: ^1.5.1
   google_maps_flutter: ^1.0.6
+  webview_flutter: ^1.0.7
+
 
 
   # The following adds the Cupertino Icons font to your application.
